Trabajando ahora en los test que tiene problemas en esta version.